fixed some conflicts with the new delete button for comments, and the new comment input. Disabled 'older posts' because its quite behind in development and needs a rewrite.

--- a/app/webroot/css/wall_posts.css
+++ b/app/webroot/css/wall_posts.css
@@ -21,12 +21,17 @@ div.wallPostWrap div.wallPost div.content h1{
 	margin: 0 15px  0;
 	font-weight: normal;
 }
+div.wallPostWrap div.content h1{
+	font-size: 1.6em;
+	line-height: 1.6em;
+	margin: 0 15px 15px 70px;
+}
 div.wallPostWrap div.content p{
 	font-size: 1.4em;
 	line-height: 1.4em;
-	margin: 0 15px 15px 0;
+	margin: 0 15px 15px 70px;
 }
-div.wallPostWrap div.delete{
+div.wallPostWrap div.deletePost{
 	position: absolute;
 	top:10px;
 	right: 10px;
@@ -94,10 +99,10 @@ div.wallPostWrap div.comments div.comment{
 }
 div.wallPostWrap div.comments div.comment div.content p{
 	margin: 0 15px 15px 0;
-	font-size: 1.1em;
-	line-height: 1.1em;
+	font-size: 1.3em;
+	line-height: 1.3em;
 }
-div.wallPostWrap div.comments div.comment div.delete{
+div.wallPostWrap div.comments div.comment div.deleteComment{
 	position: absolute;
 	top:5px;
 	right:5px;
